<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Generic -->
    <string name="app_name">Ecards</string>
    <string name="show_activity">ecard</string>
    <string name="add_activity">add ecard</string>
    
    <!-- Add fragment -->
    <string name="name_hint">name</string>
    <string name="company_hint">company</string>
    <string name="phone_hint">phone</string>
    <string name="email_hint">email</string>
    <string name="note_hint">note</string>
    <string name="role_hint">role</string>
    <string name="add_button">add</string>
    
    <!-- Dashboard -->
    <string name="dashboard_add">add your ecard</string>
    <string name="dashboard_myecards">my personal card</string>
    <string name="dashboard_ecards">ecards</string>
    <string name="dashboard_scan">scan</string>

    <!-- Action Bar Menu -->    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Next</string>
    
    <!-- Context Menu -->
    <string name="context_menu_preview">Preview</string>
    <string name="context_menu_delete">Delete</string>
    
    <!-- Search -->
    <string name="search_name">Search ecards</string>
    <string name="search_hint">Search ecards</string>
    <string name="search_description">Search ecards</string>    
    
    <!-- ZXing integration -->
    <string name="zx_title">Install Barcode Scanner?</string>
    <string name="zx_message">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="zx_pos">Yes</string>
    <string name="zx_neg">No</string>
    
    

</resources>