<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Fill.VerticalOrientation"
    android:padding="5dp">
    <LinearLayout 
        style="@style/Fill.VerticalOrientation">
        <EditText
	        style="@style/Input"
	        android:id="@+id/name"
	        android:hint="@string/name_hint"
	        android:inputType="textPersonName" />
	    <EditText
	        style="@style/Input"
	        android:id="@+id/company"
	        android:hint="@string/company_hint"
	        android:inputType="text" />
	    <EditText
	        style="@style/Input"
	        android:id="@+id/role"
	        android:hint="@string/role_hint"
	        android:inputType="text" />
	    <EditText
	        style="@style/Input"
	        android:id="@+id/phone"
	        android:hint="@string/phone_hint"
	        android:inputType="phone" />
	    <EditText
	        style="@style/Input"
	        android:id="@+id/email"
	        android:hint="@string/email_hint"
	        android:inputType="textEmailAddress" />
	    <EditText
	        style="@style/Input"
	        android:id="@+id/note"
	        android:hint="@string/note_hint"
	        android:inputType="text" />
    </LinearLayout>
</ScrollView>